# swift-api-tool

./: Cargo.toml  ISSUES.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: diff.rs  html.rs  main.rs
