[package]
name = "swift-api-tool"
version = "0.2.0"
edition = "2021"
authors = ["Jonathan Wight <jwight@mac.com>"]
description = "Extract the public API surface of a Swift package into a single Markdown, YAML, or HTML file."
repository = "https://github.com/schwa/swift-api-tool"
homepage = "https://github.com/schwa/swift-api-tool"
license = "MIT"
readme = "README.md"
keywords = ["swift", "api", "symbolgraph", "documentation", "diff"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "swift-api-tool"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
